# Object-Detect-Nanodet

./: .gitignore  .gitmodules  README.md  demo-inference-with-pytorch.ipynb  obj-nanodet.py  pyproject.toml
